# MyInvicibleLibrary

./: .gitignore  CMakeLists.txt  Huffman.h  RAID.h  auxiliar.h  dox  main.cpp  new.txt  resultado
MyInvencibleLibrary/: CMakeLists.txt  Huffmain.cpp  Huffman.h  Interfaz.pro  Interprete.h  InterpreteMain.cpp  LinkedList.h  Node.h  RAID.h  chunks  clientmain.cpp  clientmanager.cpp  clientmanager.h  clientsocket.cpp  clientsocket.h  dbmanager.cpp  dbmanager.h  fiomain.cpp  handler.cpp  jsonmain.cpp  libmain.cpp  main.cpp  mainP.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadata.cpp  metadata.h  prueba  restclient.cpp  restclient.h  servermain.cpp  servermanager.cpp  servermanager.h  serversocket.cpp  serversocket.h  socketclient.cpp  socketserver.cpp
MyInvencibleLibrary/RAID/1/: chunks.paridad
MyInvencibleLibrary/RAID/4/: chunks.paridad
MyInvencibleLibrary/include/: handler.h
MyInvencibleLibrary/src/: handler.cpp
RAID/1/: chunks.paridad
RAID/3/: chunks.1  chunks.2  chunks.paridad
RAID/4/: chunks.3  chunks.paridad
